--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Build
         run: |
-          cmake -B ${{runner.workspace}}/build -DCMAKE_BUILD_TYPE=Release -DBUILD_PYTHON=ON -DBUILD_SHARED_LIBS=OFF
+          cmake -B ${{runner.workspace}}/build -DCMAKE_BUILD_TYPE=Release
           cmake --build ${{runner.workspace}}/build --target install --parallel --config Release
 
       - name: Publish
